Added method for normalize text and refactor methods for use logger in UtilsBigdecimal